refactor: service centralizado de normalizer de string